--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BookMarker</string>
+    <string name="menu_description">메뉴</string>
+    <string name="menu_home">홈</string>
+    <string name="menu_bookmark">북마크</string>
+    <string name="menu_settings">설정</string>
+    <string name="hello_android">Hello Android!</string>
 </resources>
