--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="menu_bookmark">북마크</string>
     <string name="menu_settings">설정</string>
     <string name="hello_android">Hello Android!</string>
+    <string name="press_back_to_exit">Press \'back\' button one more time to close app</string>
 </resources>
