--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,3 @@
 <resources>
-    <string name="app_name">BookMarker</string>
-
-    <string name="installed_browser">Installed browsers</string>
-    <string name="menu_description">Menu</string>
-    <string name="menu_settings">Settings</string>
-    <string name="press_back_to_exit">Press \'back\' button one more time to close app</string>
-    <string name="sync">Sync</string>
-    <string name="no_browsers_connected">No browsers connected.\nTry syncing your browsers.</string>
+    <string name="app_name" translatable="false">BookMarker</string>
 </resources>
