--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -6,4 +6,13 @@
     <string name="home_installed_browser">설치된 브라우저</string>
     <string name="home_no_browsers_connected">연결된 브라우저가 없습니다.\n브라우저를 동기화해보세요.</string>
     <string name="home_syncing">%1$s 동기화 중...</string>
+    <string name="home_error_with_detail">%1$s (%2$s)</string>
+    <string name="home_error_invalid_uri">파일 경로가 잘못되었어요.</string>
+    <string name="home_error_file_not_found">북마크 파일을 찾을 수 없어요.</string>
+    <string name="home_error_permission_denied">파일 읽기 권한이 없어요.</string>
+    <string name="home_error_io">파일을 읽는 중 오류가 발생했어요.</string>
+    <string name="home_error_empty_content">북마크 파일 내용이 비어 있어요.</string>
+    <string name="home_error_parse">북마크 형식을 해석하지 못했어요.</string>
+    <string name="home_error_unsupported_browser">지원하지 않는 브라우저예요.</string>
+    <string name="home_error_unknown">알 수 없는 오류가 발생했어요.</string>
 </resources>
