--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -15,4 +15,5 @@
     <string name="home_error_parse">북마크 형식을 해석하지 못했어요.</string>
     <string name="home_error_unsupported_browser">지원하지 않는 브라우저예요.</string>
     <string name="home_error_unknown">알 수 없는 오류가 발생했어요.</string>
+    <string name="home_connected_browser_icon_cd">%1$s 아이콘</string>
 </resources>
