--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -16,4 +16,5 @@
     <string name="home_error_unsupported_browser">지원하지 않는 브라우저예요.</string>
     <string name="home_error_unknown">알 수 없는 오류가 발생했어요.</string>
     <string name="home_no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
+    <string name="home_import_bookmarks">북마크 가져오기</string>
 </resources>
