--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -17,4 +17,7 @@
     <string name="home_error_unknown">알 수 없는 오류가 발생했어요.</string>
     <string name="home_no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
     <string name="home_import_bookmarks">북마크 가져오기</string>
+    <string name="home_import_guide_title">크롬 북마크 가져오기</string>
+    <string name="home_import_guide_body">1. 크롬에서 북마크를 HTML 파일로 내보내세요.\n2. 내보낸 HTML 파일을 이 기기에 저장하거나 공유하세요.\n3. 아래 “파일 선택”을 눌러 HTML 파일을 선택하세요.</string>
+    <string name="home_import_guide_select_file">파일 선택</string>
 </resources>
