--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -18,6 +18,15 @@
     <string name="home_no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
     <string name="home_import_bookmarks">북마크 가져오기</string>
     <string name="home_import_guide_title">크롬 북마크 가져오기</string>
-    <string name="home_import_guide_body">1. 크롬에서 북마크를 HTML 파일로 내보내세요.\n2. 내보낸 HTML 파일을 이 기기에 저장하거나 공유하세요.\n3. 아래 “파일 선택”을 눌러 HTML 파일을 선택하세요.</string>
-    <string name="home_import_guide_select_file">파일 선택</string>
+    <string name="home_import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
+    <string name="home_import_guide_step1_body">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다. PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
+    <string name="home_import_guide_step1_button">PC 가이드 열기</string>
+    <string name="home_import_guide_step2_title">2. HTML 파일을 휴대폰으로 이동</string>
+    <string name="home_import_guide_step2_body">내보낸 HTML 파일을 현재 기기로 옮기세요. 보통 다운로드 폴더(예: /storage/emulated/0/Download)에 있고, 파일명은 bookmarks_YYYY_MM_DD.html 형식입니다.</string>
+    <string name="home_import_guide_step2_button">다운로드 열기</string>
+    <string name="home_import_guide_step3_title">3. HTML 파일 가져오기</string>
+    <string name="home_import_guide_step3_body">아래 버튼을 눌러 내보낸 HTML 파일을 선택하면 앱으로 북마크를 가져올 수 있습니다.</string>
+    <string name="home_import_guide_step3_button">HTML 파일 선택</string>
+    <string name="home_import_guide_open_guide_failed">가이드 페이지를 열 수 없어요.</string>
+    <string name="home_import_guide_open_downloads_failed">다운로드를 열 수 없어요.</string>
 </resources>
