--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -1,32 +1,32 @@
 <resources>
-    <string name="home_title">BookMarker</string>
-    <string name="home_menu_description">메뉴</string>
-    <string name="home_menu_settings">설정</string>
-    <string name="home_sync">동기화</string>
-    <string name="home_installed_browser">설치된 브라우저</string>
-    <string name="home_no_browsers_connected">연결된 브라우저가 없습니다.\n브라우저를 동기화해보세요.</string>
-    <string name="home_syncing">%1$s 동기화 중...</string>
-    <string name="home_error_with_detail">%1$s (%2$s)</string>
-    <string name="home_error_invalid_uri">파일 경로가 잘못되었어요.</string>
-    <string name="home_error_file_not_found">북마크 파일을 찾을 수 없어요.</string>
-    <string name="home_error_permission_denied">파일 읽기 권한이 없어요.</string>
-    <string name="home_error_io">파일을 읽는 중 오류가 발생했어요.</string>
-    <string name="home_error_empty_content">북마크 파일 내용이 비어 있어요.</string>
-    <string name="home_error_parse">북마크 형식을 해석하지 못했어요.</string>
-    <string name="home_error_unsupported_browser">지원하지 않는 브라우저예요.</string>
-    <string name="home_error_unknown">알 수 없는 오류가 발생했어요.</string>
-    <string name="home_no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
-    <string name="home_import_bookmarks">북마크 가져오기</string>
-    <string name="home_import_guide_title">크롬 북마크 가져오기</string>
-    <string name="home_import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
-    <string name="home_import_guide_step1_body">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다. PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
-    <string name="home_import_guide_step1_button">PC 가이드 열기</string>
-    <string name="home_import_guide_step2_title">2. HTML 파일을 휴대폰으로 이동</string>
-    <string name="home_import_guide_step2_body">내보낸 HTML 파일을 현재 기기로 옮기세요. 보통 다운로드 폴더(예: /storage/emulated/0/Download)에 있고, 파일명은 bookmarks_YYYY_MM_DD.html 형식입니다.</string>
-    <string name="home_import_guide_step2_button">다운로드 열기</string>
-    <string name="home_import_guide_step3_title">3. HTML 파일 가져오기</string>
-    <string name="home_import_guide_step3_body">아래 버튼을 눌러 내보낸 HTML 파일을 선택하면 앱으로 북마크를 가져올 수 있습니다.</string>
-    <string name="home_import_guide_step3_button">HTML 파일 선택</string>
-    <string name="home_import_guide_open_guide_failed">가이드 페이지를 열 수 없어요.</string>
-    <string name="home_import_guide_open_downloads_failed">다운로드를 열 수 없어요.</string>
+    <string name="title">BookMarker</string>
+    <string name="menu_description">메뉴</string>
+    <string name="menu_settings">설정</string>
+    <string name="sync">동기화</string>
+    <string name="installed_browser">설치된 브라우저</string>
+    <string name="no_browsers_connected">연결된 브라우저가 없습니다.\n브라우저를 동기화해보세요.</string>
+    <string name="syncing">%1$s 동기화 중...</string>
+    <string name="error_with_detail">%1$s (%2$s)</string>
+    <string name="error_invalid_uri">파일 경로가 잘못되었어요.</string>
+    <string name="error_file_not_found">북마크 파일을 찾을 수 없어요.</string>
+    <string name="error_permission_denied">파일 읽기 권한이 없어요.</string>
+    <string name="error_io">파일을 읽는 중 오류가 발생했어요.</string>
+    <string name="error_empty_content">북마크 파일 내용이 비어 있어요.</string>
+    <string name="error_parse">북마크 형식을 해석하지 못했어요.</string>
+    <string name="error_unsupported_browser">지원하지 않는 브라우저예요.</string>
+    <string name="error_unknown">알 수 없는 오류가 발생했어요.</string>
+    <string name="no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
+    <string name="import_bookmarks">북마크 가져오기</string>
+    <string name="import_guide_title">크롬 북마크 가져오기</string>
+    <string name="import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다.</string>
+    <string name="import_guide_step1_body_desktop">PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_body">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다. PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_button">PC 가이드 열기</string>
+    <string name="import_guide_step2_title">2. HTML 파일을 휴대폰으로 이동</string>
+    <string name="import_guide_step3_title">3. HTML 파일 가져오기</string>
+    <string name="import_guide_step3_body">아래 버튼을 눌러 내보낸 HTML 파일을 선택하면 앱으로 북마크를 가져올 수 있습니다.</string>
+    <string name="import_guide_step3_button">HTML 파일 선택</string>
+    <string name="import_guide_open_guide_failed">가이드 페이지를 열 수 없어요.</string>
+    <string name="import_guide_open_downloads_failed">다운로드를 열 수 없어요.</string>
 </resources>
