--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -1,32 +1,32 @@
 <resources>
-    <string name="home_title">BookMarker</string>
-    <string name="home_menu_description">Menu</string>
-    <string name="home_menu_settings">Settings</string>
-    <string name="home_sync">Sync</string>
-    <string name="home_installed_browser">Installed browsers</string>
-    <string name="home_no_browsers_connected">No browsers connected.\nTry syncing your browsers.</string>
-    <string name="home_syncing">Syncing %1$s...</string>
-    <string name="home_error_with_detail">%1$s (%2$s)</string>
-    <string name="home_error_invalid_uri">The file path is invalid.</string>
-    <string name="home_error_file_not_found">Bookmark file not found.</string>
-    <string name="home_error_permission_denied">No permission to read the file.</string>
-    <string name="home_error_io">An error occurred while reading the file.</string>
-    <string name="home_error_empty_content">The bookmark file is empty.</string>
-    <string name="home_error_parse">Failed to parse bookmark format.</string>
-    <string name="home_error_unsupported_browser">Unsupported browser.</string>
-    <string name="home_error_unknown">An unknown error occurred.</string>
-    <string name="home_no_bookmarks_imported">No bookmarks imported yet.</string>
-    <string name="home_import_bookmarks">Import bookmarks</string>
-    <string name="home_import_guide_title">Import Chrome bookmarks</string>
-    <string name="home_import_guide_step1_title">1. Export on desktop Chrome</string>
-    <string name="home_import_guide_step1_body">On mobile Chrome, bookmark export is not available. On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
-    <string name="home_import_guide_step1_button">Open desktop guide</string>
-    <string name="home_import_guide_step2_title">2. Move the HTML file to phone</string>
-    <string name="home_import_guide_step2_body">After export, transfer the HTML file to this device. The file is usually in Download (for example: /storage/emulated/0/Download) with a name like bookmarks_YYYY_MM_DD.html.</string>
-    <string name="home_import_guide_step2_button">Open Downloads</string>
-    <string name="home_import_guide_step3_title">3. Import HTML file</string>
-    <string name="home_import_guide_step3_body">Tap the button below and choose the exported HTML file to import bookmarks into the app.</string>
-    <string name="home_import_guide_step3_button">Select HTML file</string>
-    <string name="home_import_guide_open_guide_failed">Could not open guide page.</string>
-    <string name="home_import_guide_open_downloads_failed">Could not open Downloads.</string>
+    <string name="title">BookMarker</string>
+    <string name="menu_description">Menu</string>
+    <string name="menu_settings">Settings</string>
+    <string name="sync">Sync</string>
+    <string name="installed_browser">Installed browsers</string>
+    <string name="no_browsers_connected">No browsers connected.\nTry syncing your browsers.</string>
+    <string name="syncing">Syncing %1$s...</string>
+    <string name="error_with_detail">%1$s (%2$s)</string>
+    <string name="error_invalid_uri">The file path is invalid.</string>
+    <string name="error_file_not_found">Bookmark file not found.</string>
+    <string name="error_permission_denied">No permission to read the file.</string>
+    <string name="error_io">An error occurred while reading the file.</string>
+    <string name="error_empty_content">The bookmark file is empty.</string>
+    <string name="error_parse">Failed to parse bookmark format.</string>
+    <string name="error_unsupported_browser">Unsupported browser.</string>
+    <string name="error_unknown">An unknown error occurred.</string>
+    <string name="no_bookmarks_imported">No bookmarks imported yet.</string>
+    <string name="import_bookmarks">Import bookmarks</string>
+    <string name="import_guide_title">Import Chrome bookmarks</string>
+    <string name="import_guide_step1_title">1. Export on desktop Chrome</string>
+    <string name="import_guide_step1_body_notice">On mobile Chrome, bookmark export is not available.</string>
+    <string name="import_guide_step1_body_desktop">On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
+    <string name="import_guide_step1_body">On mobile Chrome, bookmark export is not available. On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
+    <string name="import_guide_step1_button">Open desktop guide</string>
+    <string name="import_guide_step2_title">2. Move the HTML file to phone</string>
+    <string name="import_guide_step3_title">3. Import HTML file</string>
+    <string name="import_guide_step3_body">Tap the button below and choose the exported HTML file to import bookmarks into the app.</string>
+    <string name="import_guide_step3_button">Select HTML file</string>
+    <string name="import_guide_open_guide_failed">Could not open guide page.</string>
+    <string name="import_guide_open_downloads_failed">Could not open Downloads.</string>
 </resources>
