Implement `SettingsViewModel` and `SettingsState` using Mavericks to display the app version in `SettingsScreen`.

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="settings">Settings</string>
     <string name="press_back_to_exit">Press \'back\' button one more time to close app</string>
     <string name="sync">Sync</string>
+    <string name="app_version_label">App Version</string>
     <string name="no_browsers_connected">No browsers connected.\nTry syncing your browsers.</string>
 </resources>
