--- a/core/ui/src/main/res/values-ko/strings.xml
+++ b/core/ui/src/main/res/values-ko/strings.xml
@@ -2,6 +2,9 @@
     <string name="installed_browser">설치된 브라우저</string>
     <string name="menu">메뉴</string>
     <string name="settings">설정</string>
+    <string name="default_browser_label">기본 브라우저</string>
+    <string name="default_browser_title">기본 브라우저 선택</string>
+    <string name="not_selected">선택 안 함</string>
     <string name="press_back_to_exit">앱을 종료하려면 \'뒤로\' 버튼을 한 번 더 누르세요</string>
     <string name="sync">동기화</string>
     <string name="app_version_label">앱 버전</string>
