--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="installed_browser">Installed browsers</string>
     <string name="menu">Menu</string>
     <string name="settings">Settings</string>
+    <string name="default_browser_label">Default Browser</string>
+    <string name="default_browser_title">Select Default Browser</string>
+    <string name="not_selected">Not selected</string>
     <string name="press_back_to_exit">Press \'back\' button one more time to close app</string>
     <string name="sync">Sync</string>
     <string name="app_version_label">App Version</string>
