--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -4,7 +4,7 @@
     <string name="menu_settings">설정</string>
     <string name="sync">동기화</string>
     <string name="installed_browser">설치된 브라우저</string>
-    <string name="no_browsers_connected">연결된 브라우저가 없습니다.\n브라우저를 동기화해보세요.</string>
+    <string name="no_browsers_connected">가져온 북마크가 없습니다.\n북마크를 동기화 해보세요.</string>
     <string name="error_with_detail">%1$s (%2$s)</string>
     <string name="error_invalid_uri">파일 경로가 잘못되었어요.</string>
     <string name="error_file_not_found">북마크 파일을 찾을 수 없어요.</string>
@@ -15,6 +15,7 @@
     <string name="error_unsupported_browser">지원하지 않는 브라우저예요.</string>
     <string name="error_unknown">알 수 없는 오류가 발생했어요.</string>
     <string name="no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
+    <string name="empty_bookmarks">북마크가 비어있습니다.</string>
     <string name="import_bookmarks">북마크 가져오기</string>
     <string name="import_guide_title">크롬 북마크 가져오기</string>
     <string name="import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
