--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="menu_settings">Settings</string>
     <string name="sync">Sync</string>
     <string name="installed_browser">Installed browsers</string>
-    <string name="no_browsers_connected">No browsers connected.\nTry syncing your browsers.</string>
+    <string name="no_browsers_connected">가져온 북마크가 없습니다.\n북마크를 동기화 해보세요.</string>
     <string name="error_with_detail">%1$s (%2$s)</string>
     <string name="error_invalid_uri">The file path is invalid.</string>
     <string name="error_file_not_found">Bookmark file not found.</string>
@@ -15,6 +15,7 @@
     <string name="error_unsupported_browser">Unsupported browser.</string>
     <string name="error_unknown">An unknown error occurred.</string>
     <string name="no_bookmarks_imported">No bookmarks imported yet.</string>
+    <string name="empty_bookmarks">북마크가 비어있습니다.</string>
     <string name="import_bookmarks">Import bookmarks</string>
     <string name="import_guide_title">Import Chrome bookmarks</string>
     <string name="import_guide_step1_title">1. Export on desktop Chrome</string>
