--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -18,6 +18,7 @@
     <string name="empty_bookmarks">북마크가 비어있습니다.</string>
     <string name="import_bookmarks">북마크 가져오기</string>
     <string name="import_guide_title">크롬 북마크 가져오기</string>
+    <string name="import_guide_title_for_browser">%1$s 북마크 가져오기</string>
     <string name="import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
     <string name="import_guide_step1_body_notice">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다.</string>
     <string name="import_guide_step1_body_desktop">PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
