--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="title">BookMarker</string>
     <string name="menu_description">Menu</string>
     <string name="menu_settings">Settings</string>
+    <string name="edit_mode_done">Done</string>
     <string name="sync">Sync</string>
     <string name="installed_browser">Installed browsers</string>
     <string name="no_browsers_connected">가져온 북마크가 없습니다.\n북마크를 동기화 해보세요.</string>
@@ -36,4 +37,8 @@
     <string name="import_overwrite_dialog_message">A different bookmark file was detected. If you continue, the existing imported bookmarks will be removed and replaced.</string>
     <string name="import_overwrite_dialog_confirm">Overwrite</string>
     <string name="import_overwrite_dialog_cancel">Cancel</string>
+    <string name="delete_bookmark_dialog_title">Delete bookmarks?</string>
+    <string name="delete_bookmark_dialog_message">북마크를 삭제하시겠습니까?</string>
+    <string name="delete_bookmark_dialog_confirm">Delete</string>
+    <string name="delete_bookmark_dialog_cancel">Cancel</string>
 </resources>
