Implement browser-specific bookmark import guides by adding comprehensive localized strings and a `Browser` classification utility. Refactor `BookmarkImportGuideScreen` to dynamically resolve step-by-step instructions based on the detected browser, and introduce `Step1GuideContent` to manage varying desktop export workflows.

--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -18,6 +18,7 @@
     <string name="no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
     <string name="empty_bookmarks">북마크가 비어있습니다.</string>
     <string name="import_bookmarks">북마크 가져오기</string>
+    <string name="browser_generic_name">브라우저</string>
     <string name="import_guide_title">크롬 북마크 가져오기</string>
     <string name="import_guide_title_for_browser">%1$s 북마크 가져오기</string>
     <string name="import_guide_step1_title">1. PC 크롬에서 북마크 내보내기</string>
@@ -25,6 +26,48 @@
     <string name="import_guide_step1_body_desktop">PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
     <string name="import_guide_step1_body">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다. PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
     <string name="import_guide_step1_button">PC 가이드 열기</string>
+    <string name="import_guide_step1_title_brave">1. PC Brave에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_brave">모바일 Brave에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_brave">PC Brave에서 메뉴(≡) \u003e 북마크 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_title_edge">1. PC Edge에서 즐겨찾기 내보내기</string>
+    <string name="import_guide_step1_body_notice_edge">모바일 Edge에서는 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_edge">PC Edge에서 즐겨찾기 \u003e 즐겨찾기 관리로 이동한 뒤, 메뉴(⋯) \u003e 즐겨찾기 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_title_naver_whale">1. PC 웨일에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_naver_whale">모바일 웨일에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_naver_whale">PC 웨일에서 메뉴(⋮) \u003e 북마크 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_title_samsung_internet">1. 삼성 인터넷 북마크 동기화하기</string>
+    <string name="import_guide_step1_body_notice_samsung_internet">삼성 인터넷은 모바일에서 HTML 직접 내보내기를 제공하지 않는 경우가 많습니다.</string>
+    <string name="import_guide_step1_body_desktop_samsung_internet">삼성 계정으로 북마크를 동기화한 뒤, 동기화된 북마크를 PC 브라우저에서 HTML로 내보내세요.</string>
+    <string name="import_guide_step1_title_firefox">1. PC Firefox에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_firefox">모바일 Firefox에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_firefox">PC Firefox에서 북마크 \u003e 북마크 관리로 이동한 뒤, 가져오기 및 백업 \u003e 북마크를 HTML로 내보내기를 선택하세요.</string>
+    <string name="import_guide_step1_title_safari">1. Mac Safari에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_safari">iPhone/iPad Safari에서는 직접 내보내기를 지원하지 않습니다.</string>
+    <string name="import_guide_step1_body_desktop_safari">Mac Safari에서 파일 \u003e 내보내기 \u003e 북마크를 선택하세요.</string>
+    <string name="import_guide_step1_title_opera">1. PC Opera에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_opera">모바일 Opera에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_opera">PC Opera에서 북마크 관리자 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
+    <string name="import_guide_step1_title_vivaldi">1. PC Vivaldi에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_vivaldi">모바일 Vivaldi에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_vivaldi">PC Vivaldi에서 북마크 관리자 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
+    <string name="import_guide_step1_title_duckduckgo">1. PC DuckDuckGo 브라우저에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_duckduckgo">모바일 DuckDuckGo에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_duckduckgo">PC DuckDuckGo 브라우저 설정에서 북마크/즐겨찾기 내보내기(HTML)를 확인하세요.</string>
+    <string name="import_guide_step1_title_kiwi">1. Kiwi 사용자는 PC Chromium 계열 브라우저에서 내보내기</string>
+    <string name="import_guide_step1_body_notice_kiwi">Kiwi 모바일 브라우저는 직접 HTML 내보내기를 제공하지 않는 경우가 많습니다.</string>
+    <string name="import_guide_step1_body_desktop_kiwi">북마크를 PC Chromium 계열 브라우저로 동기화/이동한 뒤 HTML로 내보내세요.</string>
+    <string name="import_guide_step1_title_yandex">1. PC Yandex Browser에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_yandex">모바일 Yandex Browser에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_yandex">PC Yandex Browser에서 북마크 관리자 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
+    <string name="import_guide_step1_title_arc">1. PC Arc Browser에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_arc">모바일 Arc Search에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_arc">PC Arc Browser에서 북마크/즐겨찾기 설정으로 이동해 HTML 내보내기를 확인하세요.</string>
+    <string name="import_guide_step1_title_ie">1. Internet Explorer에서 즐겨찾기 내보내기</string>
+    <string name="import_guide_step1_body_notice_ie">Internet Explorer는 지원이 종료되어 사용이 제한될 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_ie">Internet Explorer에서 즐겨찾기 \u003e 가져오기/내보내기로 이동해 파일로 내보내세요.</string>
+    <string name="import_guide_step1_title_generic">1. PC %1$s에서 북마크 내보내기</string>
+    <string name="import_guide_step1_body_notice_generic">모바일 %1$s에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_generic">PC %1$s에서 북마크/즐겨찾기 관리 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
     <string name="import_guide_step2_title">2. HTML 파일을 휴대폰으로 이동</string>
     <string name="import_guide_step3_title">3. HTML 파일 가져오기</string>
     <string name="import_guide_step3_body">아래 버튼을 눌러 내보낸 HTML 파일을 선택하면 앱으로 북마크를 가져올 수 있습니다.</string>
