--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="no_bookmarks_imported">No bookmarks imported yet.</string>
     <string name="empty_bookmarks">북마크가 비어있습니다.</string>
     <string name="import_bookmarks">Import bookmarks</string>
+    <string name="browser_generic_name">browser</string>
     <string name="import_guide_title">Import Chrome bookmarks</string>
     <string name="import_guide_title_for_browser">Import %1$s bookmarks</string>
     <string name="import_guide_step1_title">1. Export on desktop Chrome</string>
@@ -25,6 +26,48 @@
     <string name="import_guide_step1_body_desktop">On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
     <string name="import_guide_step1_body">On mobile Chrome, bookmark export is not available. On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
     <string name="import_guide_step1_button">Open desktop guide</string>
+    <string name="import_guide_step1_title_brave">1. Export on desktop Brave</string>
+    <string name="import_guide_step1_body_notice_brave">On mobile Brave, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_brave">On your computer Brave, open menu (≡) \u003e Bookmarks \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
+    <string name="import_guide_step1_title_edge">1. Export Favorites on desktop Edge</string>
+    <string name="import_guide_step1_body_notice_edge">On mobile Edge, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_edge">On your computer Edge, open Favorites \u003e Manage Favorites, then menu (⋯) \u003e Export Favorites.</string>
+    <string name="import_guide_step1_title_naver_whale">1. Export bookmarks on desktop Naver Whale</string>
+    <string name="import_guide_step1_body_notice_naver_whale">On mobile Naver Whale, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_naver_whale">On your computer Naver Whale, open menu (⋮) \u003e Bookmarks \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
+    <string name="import_guide_step1_title_samsung_internet">1. Sync Samsung Internet bookmarks first</string>
+    <string name="import_guide_step1_body_notice_samsung_internet">Samsung Internet usually does not provide direct mobile HTML export.</string>
+    <string name="import_guide_step1_body_desktop_samsung_internet">Sync Samsung Internet bookmarks with your Samsung account, then export from a desktop browser that has synced bookmarks.</string>
+    <string name="import_guide_step1_title_firefox">1. Export on desktop Firefox</string>
+    <string name="import_guide_step1_body_notice_firefox">On mobile Firefox, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_firefox">On your computer Firefox, open Bookmarks \u003e Manage bookmarks, then Import and Backup \u003e Export Bookmarks to HTML.</string>
+    <string name="import_guide_step1_title_safari">1. Export on Mac Safari</string>
+    <string name="import_guide_step1_body_notice_safari">On iPhone/iPad Safari, direct bookmark export is not available.</string>
+    <string name="import_guide_step1_body_desktop_safari">On Mac Safari, open File \u003e Export \u003e Bookmarks.</string>
+    <string name="import_guide_step1_title_opera">1. Export on desktop Opera</string>
+    <string name="import_guide_step1_body_notice_opera">On mobile Opera, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_opera">On your computer Opera, open Bookmarks manager and use Export bookmarks to HTML.</string>
+    <string name="import_guide_step1_title_vivaldi">1. Export on desktop Vivaldi</string>
+    <string name="import_guide_step1_body_notice_vivaldi">On mobile Vivaldi, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_vivaldi">On your computer Vivaldi, open Bookmarks manager and export bookmarks as HTML.</string>
+    <string name="import_guide_step1_title_duckduckgo">1. Export on desktop DuckDuckGo Browser</string>
+    <string name="import_guide_step1_body_notice_duckduckgo">On mobile DuckDuckGo, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_duckduckgo">On desktop DuckDuckGo Browser, find bookmarks/favorites settings and export to HTML if available.</string>
+    <string name="import_guide_step1_title_kiwi">1. Export on desktop Chromium-compatible browser for Kiwi users</string>
+    <string name="import_guide_step1_body_notice_kiwi">Kiwi mobile browser does not always provide direct HTML bookmark export.</string>
+    <string name="import_guide_step1_body_desktop_kiwi">Sync or migrate your bookmarks to a desktop Chromium browser, then export bookmarks as HTML.</string>
+    <string name="import_guide_step1_title_yandex">1. Export on desktop Yandex Browser</string>
+    <string name="import_guide_step1_body_notice_yandex">On mobile Yandex Browser, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_yandex">On your computer Yandex Browser, open Bookmarks manager and export bookmarks as HTML.</string>
+    <string name="import_guide_step1_title_arc">1. Export on desktop Arc Browser</string>
+    <string name="import_guide_step1_body_notice_arc">On mobile Arc Search, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_arc">In Arc on desktop, locate bookmark/favorites settings and export to HTML if provided.</string>
+    <string name="import_guide_step1_title_ie">1. Export favorites on Internet Explorer</string>
+    <string name="import_guide_step1_body_notice_ie">Internet Explorer is deprecated and may not be available on your device.</string>
+    <string name="import_guide_step1_body_desktop_ie">In Internet Explorer, open Favorites \u003e Import and Export, then export favorites to a file.</string>
+    <string name="import_guide_step1_title_generic">1. Export bookmarks on desktop %1$s</string>
+    <string name="import_guide_step1_body_notice_generic">On mobile %1$s, bookmark export may not be available.</string>
+    <string name="import_guide_step1_body_desktop_generic">On your computer %1$s, find Bookmark/Favorites manager and export to HTML.</string>
     <string name="import_guide_step2_title">2. Move the HTML file to phone</string>
     <string name="import_guide_step3_title">3. Import HTML file</string>
     <string name="import_guide_step3_body">Tap the button below and choose the exported HTML file to import bookmarks into the app.</string>
