shakeRotation change 5 to 7

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -25,19 +25,18 @@
     <string name="import_guide_step1_body_notice">On mobile Chrome, bookmark export is not available.</string>
     <string name="import_guide_step1_body_desktop">On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
     <string name="import_guide_step1_body">On mobile Chrome, bookmark export is not available. On your computer Chrome, open menu (⋮) \u003e Bookmarks and lists \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
-    <string name="import_guide_step1_button">Open desktop guide</string>
-    <string name="import_guide_step1_title_brave">1. Export on desktop Brave</string>
-    <string name="import_guide_step1_body_notice_brave">On mobile Brave, bookmark export may not be available.</string>
-    <string name="import_guide_step1_body_desktop_brave">On your computer Brave, open menu (≡) \u003e Bookmarks \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
-    <string name="import_guide_step1_title_edge">1. Export Favorites on desktop Edge</string>
+    <string name="import_guide_step1_button">Open browser guide</string>
+    <string name="import_guide_step1_title_brave">1. Open Brave bookmarks directly</string>
+    <string name="import_guide_step1_body_notice_brave">Brave on mobile supports bookmark import and export.</string>
+    <string name="import_guide_step1_title_edge">1. Open Microsoft Edge favorites guide</string>
     <string name="import_guide_step1_body_notice_edge">On mobile Edge, bookmark export may not be available.</string>
-    <string name="import_guide_step1_body_desktop_edge">On your computer Edge, open Favorites \u003e Manage Favorites, then menu (⋯) \u003e Export Favorites.</string>
-    <string name="import_guide_step1_title_naver_whale">1. Export bookmarks on desktop Naver Whale</string>
-    <string name="import_guide_step1_body_notice_naver_whale">On mobile Naver Whale, bookmark export may not be available.</string>
-    <string name="import_guide_step1_body_desktop_naver_whale">On your computer Naver Whale, open menu (⋮) \u003e Bookmarks \u003e Bookmark manager, then menu (⋮) \u003e Export bookmarks.</string>
-    <string name="import_guide_step1_title_samsung_internet">1. Sync Samsung Internet bookmarks first</string>
-    <string name="import_guide_step1_body_notice_samsung_internet">Samsung Internet usually does not provide direct mobile HTML export.</string>
-    <string name="import_guide_step1_body_desktop_samsung_internet">Sync Samsung Internet bookmarks with your Samsung account, then export from a desktop browser that has synced bookmarks.</string>
+    <string name="import_guide_step1_body_desktop_edge">Follow Microsoft Edge favorites guide. If needed, use Favorites manager (⋯) to export favorites as HTML.</string>
+    <string name="import_guide_step1_title_naver_whale">1. Set up Naver Whale sync first</string>
+    <string name="import_guide_step1_body_notice_naver_whale">Official Naver Whale documentation focuses on bookmark sync across devices.</string>
+    <string name="import_guide_step1_body_desktop_naver_whale">Follow Whale sync guide, then check desktop Whale bookmark manager for HTML export options.</string>
+    <string name="import_guide_step1_title_samsung_internet">1. Open Samsung Internet bookmark guide</string>
+    <string name="import_guide_step1_body_notice_samsung_internet">Samsung Internet may not provide direct mobile HTML bookmark export.</string>
+    <string name="import_guide_step1_body_desktop_samsung_internet">Use Samsung Internet bookmark/sync guide, then export from a desktop browser if needed.</string>
     <string name="import_guide_step1_title_firefox">1. Export on desktop Firefox</string>
     <string name="import_guide_step1_body_notice_firefox">On mobile Firefox, bookmark export may not be available.</string>
     <string name="import_guide_step1_body_desktop_firefox">On your computer Firefox, open Bookmarks \u003e Manage bookmarks, then Import and Backup \u003e Export Bookmarks to HTML.</string>
@@ -50,25 +49,25 @@
     <string name="import_guide_step1_title_vivaldi">1. Export on desktop Vivaldi</string>
     <string name="import_guide_step1_body_notice_vivaldi">On mobile Vivaldi, bookmark export may not be available.</string>
     <string name="import_guide_step1_body_desktop_vivaldi">On your computer Vivaldi, open Bookmarks manager and export bookmarks as HTML.</string>
-    <string name="import_guide_step1_title_duckduckgo">1. Export on desktop DuckDuckGo Browser</string>
-    <string name="import_guide_step1_body_notice_duckduckgo">On mobile DuckDuckGo, bookmark export may not be available.</string>
-    <string name="import_guide_step1_body_desktop_duckduckgo">On desktop DuckDuckGo Browser, find bookmarks/favorites settings and export to HTML if available.</string>
-    <string name="import_guide_step1_title_kiwi">1. Export on desktop Chromium-compatible browser for Kiwi users</string>
-    <string name="import_guide_step1_body_notice_kiwi">Kiwi mobile browser does not always provide direct HTML bookmark export.</string>
-    <string name="import_guide_step1_body_desktop_kiwi">Sync or migrate your bookmarks to a desktop Chromium browser, then export bookmarks as HTML.</string>
+    <string name="import_guide_step1_title_duckduckgo">1. Set up DuckDuckGo Sync and Backup</string>
+    <string name="import_guide_step1_body_notice_duckduckgo">DuckDuckGo official guide focuses on sync/backup rather than HTML export.</string>
+    <string name="import_guide_step1_body_desktop_duckduckgo">Use DuckDuckGo sync guide, then move bookmarks through another desktop browser if HTML export is needed.</string>
+    <string name="import_guide_step1_title_kiwi">1. Prepare Kiwi bookmarks for export</string>
+    <string name="import_guide_step1_body_notice_kiwi">Official Kiwi documentation for bookmark HTML export is limited.</string>
+    <string name="import_guide_step1_body_desktop_kiwi">Move bookmarks to a desktop Chromium-based browser, then export bookmarks as HTML.</string>
     <string name="import_guide_step1_title_yandex">1. Export on desktop Yandex Browser</string>
     <string name="import_guide_step1_body_notice_yandex">On mobile Yandex Browser, bookmark export may not be available.</string>
     <string name="import_guide_step1_body_desktop_yandex">On your computer Yandex Browser, open Bookmarks manager and export bookmarks as HTML.</string>
-    <string name="import_guide_step1_title_arc">1. Export on desktop Arc Browser</string>
-    <string name="import_guide_step1_body_notice_arc">On mobile Arc Search, bookmark export may not be available.</string>
-    <string name="import_guide_step1_body_desktop_arc">In Arc on desktop, locate bookmark/favorites settings and export to HTML if provided.</string>
+    <string name="import_guide_step1_title_arc">1. Follow Arc import/migration guide</string>
+    <string name="import_guide_step1_body_notice_arc">Arc official guide is focused on importing data from other browsers.</string>
+    <string name="import_guide_step1_body_desktop_arc">Use Arc migration guide first. If HTML export is required, move data to a browser that supports HTML export.</string>
     <string name="import_guide_step1_title_ie">1. Export favorites on Internet Explorer</string>
     <string name="import_guide_step1_body_notice_ie">Internet Explorer is deprecated and may not be available on your device.</string>
     <string name="import_guide_step1_body_desktop_ie">In Internet Explorer, open Favorites \u003e Import and Export, then export favorites to a file.</string>
     <string name="import_guide_step1_title_generic">1. Export bookmarks on desktop %1$s</string>
     <string name="import_guide_step1_body_notice_generic">On mobile %1$s, bookmark export may not be available.</string>
     <string name="import_guide_step1_body_desktop_generic">On your computer %1$s, find Bookmark/Favorites manager and export to HTML.</string>
-    <string name="import_guide_step2_title">2. Move the HTML file to phone</string>
+    <string name="import_guide_step2_title">2. Save the HTML file to phone</string>
     <string name="import_guide_step3_title">3. Import HTML file</string>
     <string name="import_guide_step3_body">Tap the button below and choose the exported HTML file to import bookmarks into the app.</string>
     <string name="import_guide_step3_button">Select HTML file</string>
