--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -25,19 +25,18 @@
     <string name="import_guide_step1_body_notice">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다.</string>
     <string name="import_guide_step1_body_desktop">PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
     <string name="import_guide_step1_body">모바일 Chrome에서는 북마크 내보내기를 지원하지 않습니다. PC Chrome에서 메뉴(⋮) \u003e 북마크 및 목록 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
-    <string name="import_guide_step1_button">PC 가이드 열기</string>
-    <string name="import_guide_step1_title_brave">1. PC Brave에서 북마크 내보내기</string>
-    <string name="import_guide_step1_body_notice_brave">모바일 Brave에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
-    <string name="import_guide_step1_body_desktop_brave">PC Brave에서 메뉴(≡) \u003e 북마크 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
-    <string name="import_guide_step1_title_edge">1. PC Edge에서 즐겨찾기 내보내기</string>
+    <string name="import_guide_step1_button">브라우저 가이드 열기</string>
+    <string name="import_guide_step1_title_brave">1. Brave 북마크 화면 바로 열기</string>
+    <string name="import_guide_step1_body_notice_brave">모바일 Brave는 북마크 가져오기/내보내기를 지원합니다.</string>
+    <string name="import_guide_step1_title_edge">1. Microsoft Edge 즐겨찾기 가이드 열기</string>
     <string name="import_guide_step1_body_notice_edge">모바일 Edge에서는 내보내기를 지원하지 않을 수 있습니다.</string>
-    <string name="import_guide_step1_body_desktop_edge">PC Edge에서 즐겨찾기 \u003e 즐겨찾기 관리로 이동한 뒤, 메뉴(⋯) \u003e 즐겨찾기 내보내기를 선택하세요.</string>
-    <string name="import_guide_step1_title_naver_whale">1. PC 웨일에서 북마크 내보내기</string>
-    <string name="import_guide_step1_body_notice_naver_whale">모바일 웨일에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
-    <string name="import_guide_step1_body_desktop_naver_whale">PC 웨일에서 메뉴(⋮) \u003e 북마크 \u003e 북마크 관리자로 이동한 뒤, 메뉴(⋮) \u003e 북마크 내보내기를 선택하세요.</string>
-    <string name="import_guide_step1_title_samsung_internet">1. 삼성 인터넷 북마크 동기화하기</string>
-    <string name="import_guide_step1_body_notice_samsung_internet">삼성 인터넷은 모바일에서 HTML 직접 내보내기를 제공하지 않는 경우가 많습니다.</string>
-    <string name="import_guide_step1_body_desktop_samsung_internet">삼성 계정으로 북마크를 동기화한 뒤, 동기화된 북마크를 PC 브라우저에서 HTML로 내보내세요.</string>
+    <string name="import_guide_step1_body_desktop_edge">Microsoft Edge 공식 가이드를 확인하세요. 필요하면 즐겨찾기 관리자(⋯)에서 HTML 내보내기 옵션을 사용하세요.</string>
+    <string name="import_guide_step1_title_naver_whale">1. 네이버 웨일 동기화 먼저 설정하기</string>
+    <string name="import_guide_step1_body_notice_naver_whale">네이버 웨일 공식 문서는 기기 간 북마크 동기화 중심으로 안내합니다.</string>
+    <string name="import_guide_step1_body_desktop_naver_whale">웨일 동기화 가이드를 따른 뒤, PC 웨일 북마크 관리자에서 HTML 내보내기 가능 여부를 확인하세요.</string>
+    <string name="import_guide_step1_title_samsung_internet">1. 삼성 인터넷 북마크 가이드 확인하기</string>
+    <string name="import_guide_step1_body_notice_samsung_internet">삼성 인터넷은 모바일에서 HTML 직접 내보내기를 제공하지 않을 수 있습니다.</string>
+    <string name="import_guide_step1_body_desktop_samsung_internet">삼성 인터넷 북마크/동기화 가이드를 확인한 뒤, 필요하면 PC 브라우저에서 HTML로 내보내세요.</string>
     <string name="import_guide_step1_title_firefox">1. PC Firefox에서 북마크 내보내기</string>
     <string name="import_guide_step1_body_notice_firefox">모바일 Firefox에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
     <string name="import_guide_step1_body_desktop_firefox">PC Firefox에서 북마크 \u003e 북마크 관리로 이동한 뒤, 가져오기 및 백업 \u003e 북마크를 HTML로 내보내기를 선택하세요.</string>
@@ -50,25 +49,25 @@
     <string name="import_guide_step1_title_vivaldi">1. PC Vivaldi에서 북마크 내보내기</string>
     <string name="import_guide_step1_body_notice_vivaldi">모바일 Vivaldi에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
     <string name="import_guide_step1_body_desktop_vivaldi">PC Vivaldi에서 북마크 관리자 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
-    <string name="import_guide_step1_title_duckduckgo">1. PC DuckDuckGo 브라우저에서 북마크 내보내기</string>
-    <string name="import_guide_step1_body_notice_duckduckgo">모바일 DuckDuckGo에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
-    <string name="import_guide_step1_body_desktop_duckduckgo">PC DuckDuckGo 브라우저 설정에서 북마크/즐겨찾기 내보내기(HTML)를 확인하세요.</string>
-    <string name="import_guide_step1_title_kiwi">1. Kiwi 사용자는 PC Chromium 계열 브라우저에서 내보내기</string>
-    <string name="import_guide_step1_body_notice_kiwi">Kiwi 모바일 브라우저는 직접 HTML 내보내기를 제공하지 않는 경우가 많습니다.</string>
-    <string name="import_guide_step1_body_desktop_kiwi">북마크를 PC Chromium 계열 브라우저로 동기화/이동한 뒤 HTML로 내보내세요.</string>
+    <string name="import_guide_step1_title_duckduckgo">1. DuckDuckGo 동기화/백업 설정하기</string>
+    <string name="import_guide_step1_body_notice_duckduckgo">DuckDuckGo 공식 가이드는 HTML 내보내기보다 동기화/백업 중심입니다.</string>
+    <string name="import_guide_step1_body_desktop_duckduckgo">DuckDuckGo 동기화 가이드를 확인한 뒤, HTML이 필요하면 다른 PC 브라우저를 통해 내보내세요.</string>
+    <string name="import_guide_step1_title_kiwi">1. Kiwi 북마크 내보내기 준비</string>
+    <string name="import_guide_step1_body_notice_kiwi">Kiwi의 공식 HTML 내보내기 안내는 제한적입니다.</string>
+    <string name="import_guide_step1_body_desktop_kiwi">북마크를 PC Chromium 계열 브라우저로 이동한 뒤 HTML로 내보내세요.</string>
     <string name="import_guide_step1_title_yandex">1. PC Yandex Browser에서 북마크 내보내기</string>
     <string name="import_guide_step1_body_notice_yandex">모바일 Yandex Browser에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
     <string name="import_guide_step1_body_desktop_yandex">PC Yandex Browser에서 북마크 관리자 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
-    <string name="import_guide_step1_title_arc">1. PC Arc Browser에서 북마크 내보내기</string>
-    <string name="import_guide_step1_body_notice_arc">모바일 Arc Search에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
-    <string name="import_guide_step1_body_desktop_arc">PC Arc Browser에서 북마크/즐겨찾기 설정으로 이동해 HTML 내보내기를 확인하세요.</string>
+    <string name="import_guide_step1_title_arc">1. Arc 가져오기/마이그레이션 가이드 확인</string>
+    <string name="import_guide_step1_body_notice_arc">Arc 공식 가이드는 다른 브라우저 데이터 가져오기 중심입니다.</string>
+    <string name="import_guide_step1_body_desktop_arc">Arc 가이드를 먼저 확인하고, HTML 내보내기가 필요하면 HTML 지원 브라우저로 이동해 내보내세요.</string>
     <string name="import_guide_step1_title_ie">1. Internet Explorer에서 즐겨찾기 내보내기</string>
     <string name="import_guide_step1_body_notice_ie">Internet Explorer는 지원이 종료되어 사용이 제한될 수 있습니다.</string>
     <string name="import_guide_step1_body_desktop_ie">Internet Explorer에서 즐겨찾기 \u003e 가져오기/내보내기로 이동해 파일로 내보내세요.</string>
     <string name="import_guide_step1_title_generic">1. PC %1$s에서 북마크 내보내기</string>
     <string name="import_guide_step1_body_notice_generic">모바일 %1$s에서는 북마크 내보내기를 지원하지 않을 수 있습니다.</string>
     <string name="import_guide_step1_body_desktop_generic">PC %1$s에서 북마크/즐겨찾기 관리 화면으로 이동해 HTML로 내보내기를 진행하세요.</string>
-    <string name="import_guide_step2_title">2. HTML 파일을 휴대폰으로 이동</string>
+    <string name="import_guide_step2_title">2. HTML 파일을 휴대폰에 저장</string>
     <string name="import_guide_step3_title">3. HTML 파일 가져오기</string>
     <string name="import_guide_step3_body">아래 버튼을 눌러 내보낸 HTML 파일을 선택하면 앱으로 북마크를 가져올 수 있습니다.</string>
     <string name="import_guide_step3_button">HTML 파일 선택</string>
