--- a/feature/home/src/main/res/values-ko/strings.xml
+++ b/feature/home/src/main/res/values-ko/strings.xml
@@ -18,6 +18,9 @@
     <string name="error_unknown">알 수 없는 오류가 발생했어요.</string>
     <string name="no_bookmarks_imported">아직 가져온 북마크가 없어요.</string>
     <string name="empty_bookmarks">북마크가 비어있습니다.</string>
+    <string name="bookmark_icon_back">이전 폴더로 돌아가기</string>
+    <string name="bookmark_mode_list">북마크 리스트 보기</string>
+    <string name="bookmark_mode_icon">북마크 아이콘 보기</string>
     <string name="import_bookmarks">북마크 가져오기</string>
     <string name="browser_generic_name">브라우저</string>
     <string name="import_guide_title">크롬 북마크 가져오기</string>
